*** 3.0.0 / 2007-06-22
+ 2 major enhancements:
  + Added flush client.
  + Cleaning up source code.

+ 1 minor bugfix:
  + Closed a hole leaking messages.

+ 1 minor spec change:
  + send_message returns true if succeeded.

*** 2.0.2 / 2007-06-09
+ 1 major enhancement:
  + Added chat generator.

+ 1 minor enhancement:
  + Default client configuration.
  + Changed reconnecting interval from 1 sec to 3 sec.

+ 1 minor bugfix:
  + Suppressed invalid access to closed channel.

*** 2.0.1 / 2007-05-20
+ 1 minor enhancement:
  + Added dependencies of gems.
+ 2 minor bug fix:
  + Corrected an invalid use of logger in models/meteor.rb
  + An overlooked exception came to be caught.

*** 2.0.0 / 2007-05-07
+ 2 major enhancements:
  + Comet server clustering.
  + Arbitrary subdomain acceptance.
+ 4 minor enhancements:
  + Unlimited use of tags.
  + Detailed error reporting.
  + All exceptions came to be caught.
  + Cooperated with ruby's threading mechanism.

*** 1.0.5 / 2007-04-18
+ 2 minor enhancements:
  + Added signature to log.
  + Changed format of error log.
+ 1 minor bugfix:
  + Fixed invalid html.

*** 1.0.4 / 2007-03-29
+ 2 major enhancements:
  + Cached rendering result of meteor/strike.
  + Improved error and disconnection detection when reading socket.
+ 5 minor enhancements:
  + Disabled caching when back.
  + Added meteor_helper.
  + Added timer to remove forsaken iframes for Safari.
  + Added configuration option 'sweep_timeout'.
  + Added 'session_timeout' option.
+ 3 minor bugfixes:
  + Solved problem on caching of browsers of MacOS.
  + Added workaround for Safari's strange behaviour after back navigation.
  + Solved problem on connection management.

*** 1.0.3 / 2007-03-22
+ 2 major enhancements:
  + Rails plugin is installed when shooting_star init.
  + Implemented logging.
+ 1 major bug fix:
  + Fixed execution queuing and flashing.
+ 3 minor enhancements:
  + Suppressed warnings reported while installing gem.
  + Added simple documentation.