@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE cross-domain-policy 
-  SYSTEM "http://www.macromedia.com/xml/dtds/cross-domain-policy.dtd">
-<cross-domain-policy>
-  <allow-access-from domain="*" />
-</cross-domain-policy>
