@@ -34,7 +34,6 @@ class MeteorGenerator < Rails::Generator::NamedBase
       m.template 'unit_test.rb',
         File.join('test/unit', class_path, "#{file_name}_test.rb")
 
-      m.template 'crossdomain.xml', 'public/crossdomain.xml'
       m.file 'meteor_strike.swf', 'public/meteor_strike.swf'
 
       m.migration_template 'migration.rb', 'db/migrate',
